@@ -21,6 +21,8 @@
   to see this change.
 - New shortcuts have been added to allow fast switching to the first 9
   terminal tabs; the shortcut defaults to Alt+#.
+- The terminal tab close button is now properly rendered with Gtk+ themes
+  based on the "pixmap" engine.
 - New translations: Dwayne Bailey (en_GB), Hydonsingore Sie (zh_TW)
 
 
