@@ -1,5 +1,11 @@
 2004-12-18	Benedikt Meurer <benny@xfce.org>
 
+	* terminal/terminal-tab-header.c, terminal/terminal-tab-header.h: Fix
+	  tab appearance oddities with the Gtk+ pixmap engine. This should
+	  fix bug #33.
+
+2004-12-18	Benedikt Meurer <benny@xfce.org>
+
 	* terminal/terminal-window.c: Another attempt to fix the sizing
 	  bug with newly opened terminal tabs (bug #29).
 	* vim.tcpalette, linux.tcpalette, xterm.tcpalette, rxvt.tcpalette,
